--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -4,8 +4,8 @@
   %b Title:
   = @post.title
 %p
-  %b Post:
-  = @post.post
+  %b Article:
+  = @post.article
 %p
   %b Published on:
   = @post.published_on
