--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -10,8 +10,8 @@
     = f.label :title
     = f.text_field :title
   .field
-    = f.label :post
-    = f.text_area :post
+    = f.label :article
+    = f.text_area :article
   .field
     = f.label :published_on
     = f.datetime_select :published_on
