Tweaked devise to suit my needs

--- a/app/assets/stylesheets/head.css.scss
+++ b/app/assets/stylesheets/head.css.scss
@@ -11,6 +11,6 @@ div#head {
 div#head div p {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
-  color: #999;
+  color: #b7e5f4;
   margin-left: 50px;
 }
